// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This API is experimental and under-development.

syntax = "proto3";

package sax.server.multimodal;

import "saxml/protobuf/common.proto";

option java_package = "com.google.saxml";
option use_java_stubby_library = true;

message IdList {
  repeated int64 id = 1;
}

message DataItem {
  oneof item {
    string text = 1;
    bytes image_bytes = 2;
    IdList image_tokens = 3;
    // bytes audio = 4;
  }
}

message GenerateRequest {
  string model_key = 3;
  repeated DataItem items = 1;
  .sax.ExtraInputs extra_inputs = 2;
}

message GenerateResult {
  repeated DataItem items = 1;
  double score = 2;
}

message GenerateResponse {
  repeated GenerateResult results = 1;  // len(result) == # samples
}

service MultimodalService {
  // Returns generated results using the data items in the request.
  rpc Generate(GenerateRequest) returns (GenerateResponse);
}
